--- a/views/inventory.xml
+++ b/views/inventory.xml
@@ -31,13 +31,9 @@
                 <form string="Create Inventory Record" create="false" edit="false">
                  <xpath expr="//sheet" position="before">
                     <header> 
-                   <!---
-                        <button name="%(spot_check.wizard_spot_check_accountant_cosent)d" states='ongoing' type="action" string="Consent" class="btn btn-outline-primary" attrs="{'invisible':['|',('current_to_branch_accountant', '=', False)]}" />
-                        <button name="%(spot_check.wizard_spot_check_reject_cash_accountant)d" states='ongoing' type="action" string="Reject" class="btn btn-outline-danger" attrs="{'invisible':['|',('current_to_branch_accountant', '=', False)]}" />
-                        <button name="%(spot_check.wizard_spot_check_manager_cosent)d" states='confirmed_one' type="action" string="Consent" class="btn btn-outline-primary" attrs="{'invisible':['|',('current_to_branch_manager', '=', False)]}" />
-                        <button name="%(spot_check.wizard_spot_check_reject_reject_manager)d" states='confirmed_one' type="action" string="Reject" class="btn btn-outline-primary" attrs="{'invisible':['|',('current_to_branch_manager', '=', False)]}" />
-                        <field name ="current_to_branch_accountant" invisible ='1'/>
-                        <field name ="current_to_branch_manager" invisible ='1'/>-->
+                
+                        <button name="%(wizard_verify_asset_manager)d" attrs="{'invisible':[('asset_status', 'in', ['verified','rejected','dispatched','recieved'])]}" type="action" string="Verify Asset" class="btn btn-outline-primary"  />
+  
                         <field name="asset_status" widget="statusbar" statusbar_visible="available,verified,rejected,dispatched,recieved" />
                     </header>
                 </xpath>
