--- a/views/inventory_user.xml
+++ b/views/inventory_user.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-<record id="branch_view_preferences_form" model="ir.ui.view">
+<record id="location_view_preferences_form" model="ir.ui.view">
     <field name="name">Inhetitance In Preference</field>
     <field name="model">res.users</field>
     <field name="inherit_id" ref="base.view_users_form" />
     <field name="arch" type="xml">
       <xpath expr="//page/group/field[@name='signature']" position="before">
-        <group string="Spot Check Settings">
-          <field string="Branch Name" name="branch_id_spot_check" readonly="0" />
+        <group string="Inventory  Settings">
+          <field string="Location" name="loaction_id_invetory" readonly="0" />
           <field string="Role" name="user_role" readonly="0" />
-          <field string="Supervises" name="supervises" readonly="0" />
-          <field string="Till " name="till_id" readonly="0" />  
+          <field string="supervisor" name="supervisor" readonly="0" />
         </group>
       </xpath>
     </field>
