--- a/views/inventory_user.xml
+++ b/views/inventory_user.xml
@@ -8,7 +8,7 @@
       <xpath expr="//page/group/field[@name='signature']" position="before">
         <group string="Inventory  Settings">
           <field string="Location" name="loaction_id_invetory" readonly="0" />
-          <field string="Role" name="user_role" readonly="0" />
+          <field string="Role" name="user_roles" readonly="0" />
           <field string="supervisor" name="supervisor" readonly="0" />
         </group>
       </xpath>
